# evercurrent_takehome

./: .gitignore  README.md  README_UI.md  SLACK_SETUP.md  pyproject.toml  requirements-slack.txt
api/: persistence.py  server.py  slack_events.py
config/: slack_user_map.example.json
data/mock_slack/: channels.json  messages.json  threads.json  users.json
docs/: slack_integration.md
scripts/: deliver_digest.py  flush_simulated_data.py  inspect_events.py  inspect_profiles.py  run_digest.py  run_enrich.py  simulate_dm.py  simulate_emc_alert.py  simulate_thread_convo.py
src/: __init__.py
src/cache/: __init__.py  embedding_cache.py  state.py
src/digest/: __init__.py  assembler.py  shared_context.py  shared_context_models.py
src/embeddings/: __init__.py  prototypes.py  provider.py  store.py
src/enrichment/: __init__.py  drift.py  drift_models.py  enricher.py  entities.py  keywords.py  ownership.py  ownership_models.py  signals.py
src/evaluation/: __init__.py  benchmark.py
src/events/: __init__.py  builder.py
src/impact/: __init__.py  (+3 more)
tests/: conftest.py  test_caching.py  test_dependency_graph.py  test_drift.py  test_improvements.py  test_incremental.py  test_observability.py  test_offline_online.py  test_output_quality.py  test_ownership.py  test_pipeline_order.py  test_pruning.py  test_ranking_behaviour.py  test_rate_limits.py  test_shared_context.py  test_shared_summaries.py  test_slack_delivery.py  test_slack_ingest.py  test_v2_pipeline.py  test_v3_impact_reasoning.py  test_v3_issue_memory.py
ui/: package-lock.json  package.json  tailwind.config.ts
(+62 files in other folders)
